--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "firebase": "^4.4.0",
     "firebaseui": "^2.3.0",
+    "v-file-upload": "^3.1.0",
     "vue": "^2.3.3",
     "vue-fire": "^0.1.0",
+    "vue-masonry": "^0.10.12",
     "vue-router": "^2.7.0",
     "vuefire": "^1.4.4"
   },
