--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-masonry": "^0.10.12",
     "vue-router": "^2.7.0",
     "vue-toastr": "^2.0.9",
+    "vue-wysiwyg": "^1.2.7",
     "vuefire": "^1.4.4"
   },
   "devDependencies": {
